<resources>
    <string name="app_name">ScorecardPro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="standard_calculator">Standard Calculator</string>
    <string name="conversion_calculator">Conversion Calculator</string>
    <string name="formula_calculator">Formula Calculator</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <color name="white">#FFFFFF</color>
</resources>
